--- a/fangte/index.html
+++ b/fangte/index.html
@@ -25,6 +25,7 @@
 <script id="DS_PRE_JS" type="text/javascript"
         src="http://cdn.datastory.com.cn/js/pre-ds-min.js?dsTid=8c3ff03f-6aa1-4b7a-a8d6-6e983b42351e">
 </script>
+<!--修改提交-->
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="libs/wxapi.js"></script>
 </body>
